/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package core;

option java_package = "com.subterranean_security.crimson.proto.core";


message Outcome {
	bool result = 1;
	string comment = 2;
	int64 time = 3;

}

enum AuthType {
	GROUP = 0; PASSWORD = 1; NO_AUTH = 2;
}

message AuthMethod {
	int32 id = 1;
	int64 creation = 2;
	AuthType type = 3;
	string name = 7;
	
	repeated string owner = 4;
	repeated string member = 5;
	
	// if group auth
	int32 group = 6;
	string group_seed_prefix = 8;
	
	// if password auth
	string password = 9;
}